Add Google Sign in Button UI Changes to the login screen

--- a/Wishing-Well/Info.plist
+++ b/Wishing-Well/Info.plist
@@ -2,10 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.708677641651-4v76iib6rnkjognroismo7r8qvq56k9t</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Noteworthy-Bold.ttf</string>
 		<string>Montserrat-Bold.tff</string>
+		<string>Noteworthy-Bold.tff</string>
 		<string>Montserrat-Regular.tff</string>
 	</array>
 </dict>
