--- a/Lights-Out/Info.plist
+++ b/Lights-Out/Info.plist
@@ -12,6 +12,16 @@
 				<string>com.googleusercontent.apps.708677641651-4v76iib6rnkjognroismo7r8qvq56k9t</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.lightsout</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>lightsout</string>
+			</array>
+		</dict>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
